Fix alignment issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -7,7 +7,7 @@ body {
 	height: 100%;
 }
 
-.container--main {
-	background-color: var(--v-primary-lighten4);
+.container--app {
+	background-color: var(--v-primary-darken2);
 	height: 100%;
 }
